--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,24 @@
-.city-button {
-  margin: 20px
-} 
-
-button.col-12.city-button.btn.btn-secondary {
+/* button.col-12.city-button.btn.btn-secondary {
   margin: 2px;
+} */
+
+.inline {
+  display: inline-block
 }
 
 .weather-image {
-  display:inline
+  display:inline;
+  width: 50px;
+  height: 50px;
 }
 
-#daily {
+/* #daily {
   white-space:nowrap
+} */
+
+.daily-box {
+  border: 2px solid black;
+  padding: 2%;
 }
 
 /* .weather-card {
@@ -20,4 +27,9 @@ button.col-12.city-button.btn.btn-secondary {
 
 .bg-primary {
   margin: 2px
+}
+
+.menu-bar {
+  background-image: linear-gradient(-90deg, #121fd3, #9524c2);
+  text-align: center
 }
